{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "57152847-461c-4387-a69e-2b4f6601074e",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "d5811b63-1e28-4e8f-ad59-349cd1b51a04",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "LeftSide",
                    "id": "258a483e-48e0-44f3-87fb-20e5aae800bf",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6fe57547-de99-4c60-b5e0-371dc148be2c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5caa24b3-4927-4763-97cd-dc38ccd04dff",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4852b4b1-818a-48c9-a48f-fd929447e6e0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4940e064-be04-4b87-bbc9-bcfabf9f066a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "PlayerAction",
            "id": "a071d66e-e986-421e-9945-475fad7f014e",
            "actions": [
                {
                    "name": "Dodge",
                    "type": "Button",
                    "id": "dadd8fcb-de39-4f8b-90b4-c0d062c99fea",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "PassThrough",
                    "id": "631e2861-60ab-4aad-84b9-2e07874dd1d5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "87b0ce00-4e3b-404c-a6bb-30a621c69074",
                    "path": "<Keyboard>/rightCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "606d115e-6a54-4e7b-a8b9-f48a3348e56d",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerCamera",
            "id": "7b253ae1-5875-4659-b88f-a6cf9fdb05c8",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "015da508-ec6f-4b8d-a15f-5e6251e2ed17",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Mouse",
                    "type": "PassThrough",
                    "id": "7564750d-8847-4ee3-b374-5c25c3b03d58",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "RightSide",
                    "id": "e4d4ad56-302f-45b6-8fd9-b8639556afff",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3dba502c-d6c2-4452-b409-c53e077e3e04",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "5baa5361-24b5-4f84-bace-f2d9925d18f1",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "6628529e-2e30-4b2e-a73a-ddd4ec96380c",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "2349bcee-fd86-42d1-91eb-8f586225c574",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "32a568f1-3b16-41a8-9512-b26a9d8899ba",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc5cb5cf-14fe-4e4a-8855-5adbbf7aff6b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}